# ShreyasSrivatsaShopifyFall2022Challenge

./: .env.example  README.md  constants.py  data.db  main.py  pyproject.toml
models/: item.py  warehouse.py
resources/: item.py  warehouse.py
schemas/: item.py  warehouse.py
tests/: ShreyasSrivatsaFall2022ShopifyChallenge.postman_collection.json
