[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
Flask-JWT-Extended = "^4.3.1"
Flask-RESTful = "^0.3.9"
marshmallow-sqlalchemy = "^0.28.0"
marshmallow = "^3.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"